// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1 1`] = `
<button
  className="card-root"
  data-testid="card"
  type="button"
>
  <div
    className="card"
  >
    <img
      alt="Card image cap"
      className="card-img-top"
      src="https://picsum.photos/id/undefined/260/216"
      width="100%"
    />
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        test title
      </h5>
    </div>
  </div>
</button>
`;

exports[`matches snapshot 2 1`] = `
<button
  className="card-root"
  data-testid="card"
  type="button"
>
  <div
    className="card"
  >
    <img
      alt="Card image cap"
      className="card-img-top"
      src="https://picsum.photos/id/undefined/260/216"
      width="100%"
    />
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        test subtitle
      </h5>
    </div>
  </div>
</button>
`;
